--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             height: 100%;
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            overflow: hidden; /* ingen scroll */
+            overflow: hidden; /* Forhindrer rulning */
         }
 
         body {
@@ -19,9 +19,8 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            padding: 0px;
+            padding: 0;
             text-align: center;
-            position: relative;
         }
 
         header {
@@ -33,8 +32,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: space-around;
-            margin-top: 100px;
+            justify-content: flex-start;
+            margin-top: 50px;
         }
 
         .pingvin-container {
@@ -42,7 +41,8 @@
             aspect-ratio: 16 / 9;
             overflow: hidden;
             border-radius: 12px;
-            margin: 5px 0;
+            margin-bottom: 20px;
+            margin-top: 5px;
         }
 
         .pingvin-container img {
@@ -52,37 +52,37 @@
         }
 
         h1 {
-            font-size: 52px;
+            font-size: 40px; /* mindre på PC */
             color: #0D47A1;
             margin: 0 0 20px 0;
         }
 
         h2 {
-            font-size: 40px;
+            font-size: 28px; /* mindre på PC */
             margin-bottom: 10px;
             color: #1E88E5;
             font-weight: 400;
         }
 
         p, li {
-            font-size: 40px;
-            margin: 20px 0;
-            text-align: center;
+            font-size: 28px; /* mindre på PC */
+            margin: 10px 0;
         }
 
         ul {
             list-style: none;
+            text-align: center;
             padding-left: 0;
-            margin-top: 20px;
+            margin-top: 20px; /* adskiller fra affirmation */
         }
 
         ul li {
-            margin: 5px 0;
+            display: block; /* sikrer ⭐️ står under hinanden */
         }
 
         button {
             padding: 14px 30px;
-            font-size: 40px;
+            font-size: 28px; /* mindre på PC */
             margin: 15px 0;
             border: none;
             border-radius: 8px;
@@ -108,7 +108,7 @@
             font-weight: 600;
         }
 
-        /* Musikafspiller i venstre hjørne */
+        /* Musikknap i venstre hjørne */
         .music-player {
             position: fixed;
             top: 20px;
@@ -117,7 +117,7 @@
         }
 
         .music-player button {
-            font-size: 60px;
+            font-size: 40px;
             padding: 0;
             border: none;
             background: transparent;
@@ -130,32 +130,27 @@
             transform: scale(1.2);
         }
 
-        /* Blade animation */
+        /* Blad-animation */
         .leaf {
             position: fixed;
             top: -50px;
-            font-size: 40px;
-            animation: fall linear infinite;
+            font-size: 50px; /* større blade */
+            animation: fall 10s linear infinite;
             pointer-events: none;
         }
 
         @keyframes fall {
             0% { transform: translateY(0) rotate(0deg); opacity:1; }
-            100% { transform: translateY(120vh) rotate(360deg); opacity:0; }
+            100% { transform: translateY(100vh) rotate(360deg); opacity:0.5; }
         }
 
-        /* Responsivt design */
-        @media (max-width: 1023px) {
+        /* Responsivt: mindre tekst på mobil */
+        @media (max-width: 600px) {
+            h1 { font-size: 28px; }
+            h2 { font-size: 20px; }
+            p, li, button { font-size: 20px; }
             .pingvin-container { width: 90%; }
         }
-
-        @media (min-width: 1024px) {
-            h1 { font-size: 48px; }
-            h2 { font-size: 36px; }
-            p, li, button { font-size: 36px; }
-            .pingvin-container { width: 500px; }
-        }
-
     </style>
 </head>
 <body>
@@ -176,7 +171,7 @@
         <div class="pingvin-container">
             <img src="billede4.png" alt="Min søde pingvin">
         </div>
-                
+
         <button onclick="showAffirmation()">Vis dagens selvrefleksion</button>
         <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
         <ul id="todos"></ul>
@@ -186,9 +181,9 @@
         const music = document.getElementById("backgroundMusic");
         const musicBtn = document.getElementById("musicBtn");
 
-        // Forsøg automatisk afspilning
+        // Forsøg autoplay
         window.addEventListener("load", () => {
-            music.play().catch(()=>{});
+            music.play().catch(() => {});
         });
 
         musicBtn.addEventListener("click", () => {
@@ -196,13 +191,6 @@
                 music.play();
                 musicBtn.textContent = "🔊";
             } else {
-                music.pause();
-                musicBtn.textContent = "🔇";
-            }
-        });
-
-        document.addEventListener("visibilitychange", () => {
-            if (document.hidden) {
                 music.pause();
                 musicBtn.textContent = "🔇";
             }
@@ -235,13 +223,29 @@
         ];
 
         const morningTodos = [
-            ["Tag dyb vejrtrækning", "Skriv 3 ting du vil opnå", "Start dagen med et smil"],
-            ["Lav en positiv liste", "Tag på en kort gåtur", "Gentag en positiv sætning"]
+            ["Tag dyb vejrtrækning", "Skriv 3 ting du vil opnå", "Start dagen med et smil", "Lav et glas vand", "Gentag en positiv sætning"],
+            ["Lav en positiv liste", "Tag på en kort gåtur", "Gentag en positiv sætning", "Planlæg dagens vigtigste opgave", "Visualiser succes"],
+            ["Prøv en ny aktivitet", "Planlæg en lille succes", "Drik et glas vand", "Lav taknemmelighedsliste", "Start med musik du elsker"],
+            ["Fokusér på én opgave", "Lav morgenritual", "Visualiser dagens succes", "Send kærlige tanker", "Skriv dagens intention"],
+            ["Skriv hvad der gør dig glad", "Prioriter dagens vigtigste opgave", "Tal venligt til dig selv", "Lav en kort meditation", "Planlæg sjove oplevelser"],
+            ["Start med åbent hjerte", "Send kærlige tanker", "Planlæg glædesøjeblik", "Gentag positiv sætning", "Lav taknemmelighedsliste"],
+            ["Sæt mål om sjove oplevelser", "Vær opmærksom på små glæder", "Lav noget kreativt", "Drik et glas vand", "Visualiser succes"],
+            ["Gentag positiv sætning højt", "Lav en kort meditation", "Vær opmærksom på omgivelserne", "Lav taknemmelighedsliste", "Start dagen med et smil"],
+            ["Lav taknemmelighedsliste", "Hils på en venlig person", "Skriv dagens intention", "Gentag positiv sætning", "Lav en kort meditation"],
+            ["Vælg en glædelig handling", "Del noget positivt", "Start dagen med musik", "Skriv 3 ting du værdsætter", "Lav taknemmelighedsliste"]
         ];
 
         const eveningTodos = [
-            ["Skriv 3 ting du er taknemmelig for", "Tag et varmt bad", "Lyt til beroligende musik"],
-            ["Luk dagen med et smil", "Læs en bog inden sengetid", "Lav vejrtrækning"]
+            ["Skriv 3 ting du er taknemmelig for", "Tag et varmt bad", "Lyt til beroligende musik", "Læs lidt i en bog", "Lav en kort meditation"],
+            ["Luk dagen med et smil", "Læs en bog inden sengetid", "Lav vejrtrækning", "Skriv dagens læring", "Planlæg positiv morgen"],
+            ["Skriv kærligt brev til dig selv", "Mediter et par minutter", "Sig noget venligt til dig selv", "Lav taknemmelighedsliste", "Visualiser ro"],
+            ["Reflekter over små sejre", "Skriv dagens læring", "Planlæg positiv morgen", "Lyt til afslappende musik", "Lav vejrtrækning"],
+            ["Lav fred med dagens fejltrin", "Tilgiv dig selv og andre", "Lav afslappende rutine", "Tag et varmt bad", "Lyt til musik"],
+            ["Lad bekymringer falde", "Sluk skærme 30 min før sengetid", "Drik en kop urtete", "Lav en kort meditation", "Skriv 3 ting du værdsætter"],
+            ["Tæl dagens præstationer", "Ros dig selv for små ting", "Lav en kort meditation", "Lyt til musik", "Planlæg en positiv morgen"],
+            ["Fyld dig med ro", "Lyt til afslappende musik", "Lav afslappende vejrtrækning", "Skriv 3 ting du værdsætter", "Lav en kort meditation"],
+            ["Giv dig selv kærlighed og omsorg", "Skriv ned hvad du værdsætter", "Tag et øjeblik i stilhed", "Lav en kort meditation", "Lyt til musik"],
+            ["Forbered dig på god søvn", "Sørg for mørkt og roligt soveområde", "Lav kort afslapningsritual", "Skriv dagens læring", "Lyt til afslappende musik"]
         ];
 
         function showAffirmation() {
@@ -250,16 +254,18 @@
             let affirmation, todos;
 
             if (hour < 12) {
-                affirmation = morningAffirmations[Math.floor(Math.random()*morningAffirmations.length)];
-                todos = morningTodos[Math.floor(Math.random()*morningTodos.length)];
+                const idx = Math.floor(Math.random() * morningAffirmations.length);
+                affirmation = morningAffirmations[idx];
+                todos = getRandomTodos(morningTodos[idx]);
+                affirmationElement.textContent = "Morgeninspiration: " + affirmation;
                 affirmationElement.className = "morning";
             } else {
-                affirmation = eveningAffirmations[Math.floor(Math.random()*eveningAffirmations.length)];
-                todos = eveningTodos[Math.floor(Math.random()*eveningTodos.length)];
+                const idx = Math.floor(Math.random() * eveningAffirmations.length);
+                affirmation = eveningAffirmations[idx];
+                todos = getRandomTodos(eveningTodos[idx]);
+                affirmationElement.textContent = "Afteninspiration: " + affirmation;
                 affirmationElement.className = "evening";
             }
-
-            affirmationElement.textContent = affirmation;
 
             const ul = document.getElementById("todos");
             ul.innerHTML = "";
@@ -270,19 +276,22 @@
             });
         }
 
-        // Blade animation
-        function createLeaf() {
-            const leaf = document.createElement("div");
-            leaf.className = "leaf";
-            leaf.style.left = Math.random()*window.innerWidth + "px";
-            leaf.style.fontSize = (40 + Math.random()*20) + "px"; // større blade
-            leaf.style.animationDuration = (8 + Math.random()*5) + "s"; // langsommere
-            leaf.textContent = "🍁";
-            document.body.appendChild(leaf);
-            setTimeout(()=>{leaf.remove()}, 15000);
+        function getRandomTodos(todoArray) {
+            const copy = [...todoArray];
+            copy.sort(() => Math.random() - 0.5);
+            return copy.slice(0, 3);
         }
 
-        setInterval(createLeaf, 1500); // færre blade
+        // Tilføj blade
+        const leaves = ["🍁","🍂"];
+        for(let i=0;i<8;i++){
+            const leaf = document.createElement("div");
+            leaf.className = "leaf";
+            leaf.style.left = Math.random()*90 + "vw";
+            leaf.style.animationDuration = (8 + Math.random()*6) + "s"; // langsommere og forskellig varighed
+            leaf.textContent = leaves[Math.floor(Math.random()*leaves.length)];
+            document.body.appendChild(leaf);
+        }
     </script>
 </body>
 </html>
