--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
-            padding: 0;
             text-align: center;
         }
 
         header {
             width: 100%;
+            margin-top: 40px; /* luft fra toppen */
         }
 
         .content {
@@ -33,7 +32,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            margin-top: 50px;
+            margin-top: 20px;
         }
 
         .pingvin-container {
@@ -42,7 +41,6 @@
             overflow: hidden;
             border-radius: 12px;
             margin-bottom: 20px;
-            margin-top: 5px;
         }
 
         .pingvin-container img {
@@ -52,37 +50,38 @@
         }
 
         h1 {
-            font-size: 40px; /* mindre på PC */
+            font-size: 40px;
             color: #0D47A1;
             margin: 0 0 20px 0;
         }
 
         h2 {
-            font-size: 28px; /* mindre på PC */
+            font-size: 28px;
             margin-bottom: 10px;
             color: #1E88E5;
             font-weight: 400;
         }
 
-        p, li {
-            font-size: 28px; /* mindre på PC */
+        p#affirmation {
+            font-size: 28px;
             margin: 10px 0;
         }
 
-        ul {
+        ul#todos {
             list-style: none;
             text-align: center;
             padding-left: 0;
             margin-top: 20px; /* adskiller fra affirmation */
         }
 
-        ul li {
-            display: block; /* sikrer ⭐️ står under hinanden */
+        ul#todos li {
+            display: block; /* stjerner står under hinanden */
+            margin: 5px 0;
         }
 
         button {
             padding: 14px 30px;
-            font-size: 28px; /* mindre på PC */
+            font-size: 28px;
             margin: 15px 0;
             border: none;
             border-radius: 8px;
@@ -134,8 +133,8 @@
         .leaf {
             position: fixed;
             top: -50px;
-            font-size: 50px; /* større blade */
-            animation: fall 10s linear infinite;
+            font-size: 50px;
+            animation: fall linear infinite;
             pointer-events: none;
         }
 
@@ -148,7 +147,7 @@
         @media (max-width: 600px) {
             h1 { font-size: 28px; }
             h2 { font-size: 20px; }
-            p, li, button { font-size: 20px; }
+            p#affirmation, ul#todos li, button { font-size: 20px; }
             .pingvin-container { width: 90%; }
         }
     </style>
@@ -282,13 +281,14 @@
             return copy.slice(0, 3);
         }
 
-        // Tilføj blade
+        // Tilføj blade 🍁/🍂
         const leaves = ["🍁","🍂"];
-        for(let i=0;i<8;i++){
+        for(let i=0;i<6;i++){
             const leaf = document.createElement("div");
             leaf.className = "leaf";
             leaf.style.left = Math.random()*90 + "vw";
-            leaf.style.animationDuration = (8 + Math.random()*6) + "s"; // langsommere og forskellig varighed
+            leaf.style.animationDuration = (10 + Math.random()*10) + "s"; // langsommere fald
+            leaf.style.fontSize = (40 + Math.random()*30) + "px"; // større blade
             leaf.textContent = leaves[Math.floor(Math.random()*leaves.length)];
             document.body.appendChild(leaf);
         }
