--- a/index.html
+++ b/index.html
@@ -68,17 +68,19 @@
         }
 
         ul#todos {
-            list-style: none;
-            text-align: center;
-            padding-left: 0;
-            margin-top: 20px; /* adskiller fra affirmation */
-        }
+    list-style: none;
+    text-align: left;   /* venstrejusteret for ens stjerner */
+    padding-left: 0;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* sikrer ⭐️ står lige under hinanden */
+}
 
-        ul#todos li {
-            display: block; /* stjerner står under hinanden */
-            margin: 5px 0;
-        }
-
+ul#todos li {
+    display: block;
+    margin: 5px 0;
+}
         button {
             padding: 14px 30px;
             font-size: 28px;
