--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     list-style: none;
     text-align: left;   /* venstrejusteret for ens stjerner */
     padding-left: 0;
-    margin-top: 20px;
+    margin-top: 20px;   /* adskiller fra affirmation */
     display: flex;
     flex-direction: column;
     align-items: flex-start; /* sikrer ⭐️ står lige under hinanden */
@@ -79,7 +79,8 @@
 
 ul#todos li {
     display: block;
-    margin: 5px 0;
+    margin: 10px 0;  /* beholder samme afstand som tekststørrelsen */
+    font-size: 28px; /* beholder den oprindelige størrelse */
 }
         button {
             padding: 14px 30px;
