--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
             height: 100%;
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            overflow: hidden; /* Forhindrer rulning */
         }
 
         body {
@@ -18,12 +17,13 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: flex-start;
+            padding: 50px 50px;
             text-align: center;
         }
 
         header {
             width: 100%;
-            margin-top: 40px; /* luft fra toppen */
         }
 
         .content {
@@ -32,7 +32,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            margin-top: 20px;
+            margin-top: 30px;
         }
 
         .pingvin-container {
@@ -40,7 +40,7 @@
             aspect-ratio: 16 / 9;
             overflow: hidden;
             border-radius: 12px;
-            margin-bottom: 20px;
+            margin-bottom: 5px;
         }
 
         .pingvin-container img {
@@ -50,41 +50,36 @@
         }
 
         h1 {
-            font-size: 40px;
+            font-size: 52px;
             color: #0D47A1;
-            margin: 0 0 5px 0;
+            margin: 0;
         }
 
         h2 {
-            font-size: 28px;
-            margin-bottom: 20px;
+            font-size: 40px;
+            margin: 5px 0 0 0; /* mindre afstand */
             color: #1E88E5;
             font-weight: 400;
         }
 
-        p#affirmation {
-            font-size: 28px;
-            margin: 10px 0;
+        p, li {
+            font-size: 40px;
+            margin: 20px 0;
+            word-wrap: break-word;
         }
 
-        ul#todos {
-    list-style: none;
-    text-align: left;   /* venstrejusteret for ens stjerner */
-    padding-left: 0;
-    margin-top: 20px;   /* adskiller fra affirmation */
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; /* sikrer ⭐️ står lige under hinanden */
-}
+        ul {
+            list-style: none;
+            text-align: center;
+            display: inline-block;
+            margin-top: 20px;
+            margin-bottom: 50px;
+            padding-left: 0;
+        }
 
-ul#todos li {
-    display: block;
-    margin: 10px 0;  /* beholder samme afstand som tekststørrelsen */
-    font-size: 28px; /* beholder den oprindelige størrelse */
-}
         button {
             padding: 14px 30px;
-            font-size: 28px;
+            font-size: 40px;
             margin: 15px 0;
             border: none;
             border-radius: 8px;
@@ -110,7 +105,6 @@ ul#todos li {
             font-weight: 600;
         }
 
-        /* Musikknap i venstre hjørne */
         .music-player {
             position: fixed;
             top: 20px;
@@ -119,7 +113,7 @@ ul#todos li {
         }
 
         .music-player button {
-            font-size: 40px;
+            font-size: 60px;
             padding: 0;
             border: none;
             background: transparent;
@@ -131,28 +125,6 @@ ul#todos li {
         .music-player button:hover {
             transform: scale(1.2);
         }
-
-        /* Blad-animation */
-        .leaf {
-            position: fixed;
-            top: -50px;
-            font-size: 50px;
-            animation: fall linear infinite;
-            pointer-events: none;
-        }
-
-        @keyframes fall {
-            0% { transform: translateY(0) rotate(0deg); opacity:1; }
-            100% { transform: translateY(100vh) rotate(360deg); opacity:0.5; }
-        }
-
-        /* Responsivt: mindre tekst på mobil */
-        @media (max-width: 600px) {
-            h1 { font-size: 28px; }
-            h2 { font-size: 20px; }
-            p#affirmation, ul#todos li, button { font-size: 20px; }
-            .pingvin-container { width: 90%; }
-        }
     </style>
 </head>
 <body>
@@ -161,7 +133,7 @@ ul#todos li {
         <h2>En healende måde at reflektere på</h2>
     </header>
 
-   <!-- Musikafspiller -->
+    <!-- Musikafspiller -->
     <div class="music-player">
         <button id="musicBtn">🔊</button>
         <audio id="backgroundMusic" loop>
@@ -174,19 +146,22 @@ ul#todos li {
         <div class="pingvin-container">
             <img src="billede4.png" alt="Min søde pingvin">
         </div>
-
+                
         <button onclick="showAffirmation()">Vis dagens selvrefleksion</button>
         <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
         <ul id="todos"></ul>
     </div>
 
     <script>
+        /* === Musik-kode === */
         const music = document.getElementById("backgroundMusic");
         const musicBtn = document.getElementById("musicBtn");
 
-        // Forsøg autoplay
         window.addEventListener("load", () => {
-            music.play().catch(() => {});
+            music.play().catch(() => {
+                musicBtn.textContent = "🔊";
+            });
+            musicBtn.textContent = "🔊";
         });
 
         musicBtn.addEventListener("click", () => {
@@ -199,6 +174,7 @@ ul#todos li {
             }
         });
 
+        /* === Affirmations & ToDos === */
         const morningAffirmations = [
             "I dag starter jeg med ro og glæde.",
             "Jeg vælger at være stærk og positiv.",
@@ -252,84 +228,38 @@ ul#todos li {
         ];
 
         function showAffirmation() {
-    // Sørg for musikken kører, hvis den er paused
-    if (music.paused) {
-        music.play().catch(() => {});
-        musicBtn.textContent = "🔊";
-    }
+            const hour = new Date().getHours();
+            const affirmationElement = document.getElementById("affirmation");
+            let affirmation, todos;
 
-    const hour = new Date().getHours();
-    const affirmationElement = document.getElementById("affirmation");
-    let affirmation, todos;
+            if (hour < 12) {
+                const idx = Math.floor(Math.random() * morningAffirmations.length);
+                affirmation = morningAffirmations[idx];
+                todos = getRandomTodos(morningTodos[idx]);
+                affirmationElement.textContent = "Morgeninspiration: " + affirmation;
+                affirmationElement.className = "morning";
+            } else {
+                const idx = Math.floor(Math.random() * eveningAffirmations.length);
+                affirmation = eveningAffirmations[idx];
+                todos = getRandomTodos(eveningTodos[idx]);
+                affirmationElement.textContent = "Afteninspiration: " + affirmation;
+                affirmationElement.className = "evening";
+            }
 
-    if (hour < 12) {
-        const idx = Math.floor(Math.random() * morningAffirmations.length);
-        affirmation = morningAffirmations[idx];
-        todos = getRandomTodos(morningTodos[idx]);
-        affirmationElement.textContent = "Morgeninspiration: " + affirmation;
-        affirmationElement.className = "morning";
-    } else {
-        const idx = Math.floor(Math.random() * eveningAffirmations.length);
-        affirmation = eveningAffirmations[idx];
-        todos = getRandomTodos(eveningTodos[idx]);
-        affirmationElement.textContent = "Afteninspiration: " + affirmation;
-        affirmationElement.className = "evening";
-    }
-
-    const ul = document.getElementById("todos");
-    ul.innerHTML = "";
-    todos.forEach(todo => {
-        const li = document.createElement("li");
-        li.textContent = "⭐ " + todo;
-        ul.appendChild(li);
-    });
-}
+            const ul = document.getElementById("todos");
+            ul.innerHTML = "";
+            todos.forEach(todo => {
+                const li = document.createElement("li");
+                li.textContent = "⭐ " + todo;
+                ul.appendChild(li);
+            });
+        }
 
         function getRandomTodos(todoArray) {
             const copy = [...todoArray];
             copy.sort(() => Math.random() - 0.5);
             return copy.slice(0, 3);
         }
-
-        // Tilføj blade 🍁/🍂
-        const leaves = ["🍁","🍂"];
-        for(let i=0;i<6;i++){
-            const leaf = document.createElement("div");
-            leaf.className = "leaf";
-            leaf.style.left = Math.random()*90 + "vw";
-            leaf.style.animationDuration = (10 + Math.random()*10) + "s"; // langsommere fald
-            leaf.style.fontSize = (40 + Math.random()*30) + "px"; // større blade
-            leaf.textContent = leaves[Math.floor(Math.random()*leaves.length)];
-            document.body.appendChild(leaf);
-        }
-
-        <script>
-    const music = document.getElementById("backgroundMusic");
-    const musicBtn = document.getElementById("musicBtn");
-
-    window.addEventListener("load", () => {
-        music.play().catch(() => {
-            musicBtn.textContent = "🔊";
-        });
-        musicBtn.textContent = "🔊";
-    });
-
-    musicBtn.addEventListener("click", () => {
-        if (music.paused) {
-            music.play();
-            musicBtn.textContent = "🔊";
-        } else {
-            music.pause();
-            musicBtn.textContent = "🔇";
-        }
-    });
-
-    document.addEventListener("visibilitychange", () => {
-        if (document.hidden) {
-            music.pause();
-            musicBtn.textContent = "🔇";
-        }
-    });
     </script>
 </body>
 </html>
